k8s_manifests/backend/06-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: titanic
  labels:
    app: titanic
  namespace: titanic
spec:
  replicas: 1
  selector:
    matchLabels:
      app: titanic
  template:
    metadata:
      labels:
        app: titanic
      namespace: titanic
    spec:
      containers:
        - image: kind-registry:5000/api-excercise:latest
          name: titanic-backend
          command: ["/usr/local/bin/server"]
          args: ["listen", "--env", "prod"]
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 250m
              memory: 256Mi
