k8s_manifests/backend/07-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: titanic
  namespace: titanic
spec:
  selector:
    app: titanic
  ports:
    - port: 80
      targetPort: 8080
  type: LoadBalancer
