k8s_manifests/backend/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: minimal-ingress
  namespace: titanic
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: api.awesome
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: titanic
                port:
                  number: 80
